# Tensor-decompositions

./: .gitignore  README.md  nohup.out  pyproject.toml
_bin/: disease.sh  gowalla.sh  synthetic.sh  test.sh
_dat/: README.md  gowalla  weeplaces
_dat/disease/: __init__.py  check_data.ipynb
_dat/misc/googletrends/: __init__.py  check_data.ipynb
_notebooks/: synthetic.ipynb  test.ipynb
_src/: utils.py
_src/AGH/: AGH.py  main.py
_src/parafac/: main.py
factorization/: __init__.py  utils.py
factorization/agh/: __init__.py  main.py
factorization/parafac/: __init__.py  main.py
temp/agh/: __init__.py  main.py
temp/parafac/: main.py
