[tool.poetry]
name = "tensor_decompositions"
version = "0.1.0"
description = ""
authors = ["Kota Nakamura <koutag0317@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"
pandas = "^1.4.3"
jupyter = "^1.0.0"
tensorly = "^0.7.0"
scikit-learn = "^1.1.2"
ipykernel = "^6.15.1"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
argparse = "^1.4.0"
importlib = "^1.0.4"
black = "^22.6.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
