[tool.poetry]
name = "tensor_decompositions"
version = "0.1.0"
description = ""
authors = ["Kota Nakamura <koutag0317@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"
pandas = "^1.4.3"
jupyter = "^1.0.0"
scikit-learn = "^1.1.2"
ipykernel = "^6.15.1"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
argparse = "^1.4.0"
importlib = "^1.0.4"
black = "^22.6.0"
tqdm = "^4.64.0"
dill = "^0.3.5"
torch = {version = "^2.2.1+cu118", source = "torch_cu118"}
torchvision = {version = "^0.17.1+cu118", source = "torch_cu118"}
torchaudio = {version = "^2.2.1+cu118", source = "torch_cu118"}
jupyterlab = "^4.1.5"
tensorly = "0.8.1"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
